--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -123,7 +123,61 @@
     "subscription_expires": "Subscription Expires",
     "subscription_days_left": "Days left: {{days}}",
     "steam_profile": "Steam Profile",
-    "trade_url": "Trade URL"
+    "trade_url": "Trade URL",
+    "user_not_found": "User not found",
+    "please_login": "Please sign in",
+    "level_progress": "Level Progress",
+    "items_in_inventory": "Items in Inventory",
+    "best_weapon": "Best Weapon",
+    "inventory_empty": "Inventory is empty",
+    "no_opened_cases": "No opened cases",
+    "no_withdrawn_items": "No withdrawn items",
+    "no_sold_items": "No sold items",
+    "open_cases_hint": "Open cases to get items",
+    "opened_cases_hint": "Opened cases will be displayed here with ability to see dropped item",
+    "withdrawn_items_hint": "Pending withdrawal and withdrawn items to Steam will be displayed here",
+    "sold_items_hint": "Sold and exchanged items will be displayed here",
+    "level_bonus_tooltip": {
+      "completing_achievements": "Completing achievements",
+      "daily_login": "Daily game login",
+      "shop_purchases": "Shop purchases",
+      "event_participation": "Event participation",
+      "friend_invites": "Friend invitations",
+      "level_drop_bonus": "Leveling up increases drop bonus: +0.02% per level"
+    },
+    "inventory_descriptions": {
+      "active": "🎮 Your current items and unopened cases",
+      "opened": "📦 Opened cases - hover over case to see the dropped item",
+      "withdrawn": "📤 Items being withdrawn: pending shipment and already sent to Steam",
+      "sold": "💰 Items sold for currency or exchanged for subscription"
+    },
+    "loading_inventory": "Loading inventory...",
+    "case_not_found": "Case not found in inventory",
+    "case_template_not_found": "Case template not found",
+    "item_received": "Congratulations! You received: {{itemName}}",
+    "item_info_error": "Error: Failed to get item information",
+    "case_opening_error": "Error opening case: {{error}}",
+    "unknown_achievement": "Unknown achievement",
+    "steam_linked_success": "Steam account successfully linked!",
+    "steam_link_error": "Error linking Steam account",
+    "steam_link_try_again": "Failed to link Steam account. Please try again.",
+    "session_expired": "Session expired. Please try again.",
+    "steam_already_linked": "This Steam account is already linked to another user.",
+    "linking_process_error": "Linking process error. Please try again.",
+    "account_linking_error": "An error occurred while linking the account.",
+    "achievements_count": "Achievements",
+    "total_count": "Total",
+    "loading_yes": "Yes",
+    "loading_no": "No",
+    "case_label": "CASE",
+    "open_button": "Open",
+    "status_pending_withdrawal": "Pending Withdrawal",
+    "status_withdrawn": "Withdrawn",
+    "status_sold": "Sold",
+    "status_opened": "Opened",
+    "item_withdraw_success": "Item \"{{itemName}}\" successfully sent for withdrawal!",
+    "opening": "Opening...",
+    "items_suffix": " items"
   },
   "inventory": {
     "title": "Inventory",
