--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -119,6 +119,47 @@
     "opened_cases_hint": "Открытые кейсы будут отображаться здесь с возможностью увидеть выпавший предмет",
     "withdrawn_items_hint": "Предметы на выводе и выведенные в Steam будут отображаться здесь",
     "sold_items_hint": "Проданные и обмененные предметы будут отображаться здесь",
+    "level_bonus_tooltip": {
+      "completing_achievements": "Выполнение достижений",
+      "daily_login": "Ежедневный вход в игру",
+      "shop_purchases": "Покупки в магазине",
+      "event_participation": "Участие в событиях",
+      "friend_invites": "Приглашение друзей",
+      "level_drop_bonus": "Повышение уровня увеличивает бонус к дропу: +0.02% за каждый уровень"
+    },
+    "inventory_descriptions": {
+      "active": "🎮 Ваши текущие предметы и неоткрытые кейсы",
+      "opened": "📦 Открытые кейсы - наведите на кейс, чтобы увидеть выпавший предмет",
+      "withdrawn": "📤 Предметы на выводе: ожидающие отправки и уже отправленные в Steam",
+      "sold": "💰 Предметы, проданные за валюту или обмененные на подписку"
+    },
+    "loading_inventory": "Загрузка инвентаря...",
+    "case_not_found": "Кейс не найден в инвентаре",
+    "case_template_not_found": "Шаблон кейса не найден",
+    "item_received": "Поздравляем! Вы получили: {{itemName}}",
+    "item_info_error": "Ошибка: Не удалось получить информацию о предмете",
+    "case_opening_error": "Ошибка при открытии кейса: {{error}}",
+    "unknown_achievement": "Неизвестное достижение",
+    "steam_linked_success": "Steam аккаунт успешно привязан!",
+    "steam_link_error": "Ошибка при привязке Steam аккаунта",
+    "steam_link_try_again": "Не удалось привязать Steam аккаунт. Попробуйте еще раз.",
+    "session_expired": "Сессия истекла. Попробуйте еще раз.",
+    "steam_already_linked": "Этот Steam аккаунт уже привязан к другому пользователю.",
+    "linking_process_error": "Ошибка процесса привязки. Попробуйте еще раз.",
+    "account_linking_error": "Произошла ошибка при привязке аккаунта.",
+    "achievements_count": "Достижений",
+    "total_count": "Всего",
+    "loading_yes": "Да",
+    "loading_no": "Нет",
+    "case_label": "КЕЙС",
+    "open_button": "Открыть",
+    "status_pending_withdrawal": "Ожидает отправки",
+    "status_withdrawn": "Выведен",
+    "status_sold": "Продан",
+    "status_opened": "Открыт",
+    "item_withdraw_success": "Предмет \"{{itemName}}\" успешно отправлен на вывод!",
+    "opening": "Открываем...",
+    "items_suffix": " предметов",
     "inventory": {
       "active": "Активные",
       "opened_cases": "Открытые кейсы",
