--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -160,6 +160,38 @@
     "item_withdraw_success": "Предмет \"{{itemName}}\" успешно отправлен на вывод!",
     "opening": "Открываем...",
     "items_suffix": " предметов",
+    "steam_connected": "Steam подключен",
+    "steam_not_connected": "Steam не подключен",
+    "subscription_status_days": "{{status}}\n{{days}}",
+    "no_subscription": "Нет",
+    "drop_bonuses": "Бонусы к дропу",
+    "level_bonus": "Уровень:",
+    "status_bonus": "Статус:",
+    "achievements_bonus": "Достижения:",
+    "total_bonus": "Общий бонус:",
+    "inventory_title": "Инвентарь",
+    "subscription_tier_1": "Статус",
+    "subscription_tier_2": "Статус+",
+    "subscription_tier_3": "Статус++",
+    "subscription_tier_default": "Tier {{tier}}",
+    "rarity": {
+      "consumer": "Потребительское",
+      "industrial": "Промышленное",
+      "milspec": "Армейское",
+      "restricted": "Запрещённое",
+      "classified": "Засекреченное",
+      "covert": "Тайное",
+      "contraband": "Контрабанда"
+    },
+    "purchase_button": "Приобрести",
+    "acquired_date": "Получен:",
+    "source": "Источник:",
+    "sources": {
+      "case": "Кейс",
+      "purchase": "Покупка"
+    },
+    "drop_bonus_text": "% дроп",
+    "no_description": "Описание отсутствует",
     "inventory": {
       "active": "Активные",
       "opened_cases": "Открытые кейсы",
