--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -177,7 +177,82 @@
     "status_opened": "Opened",
     "item_withdraw_success": "Item \"{{itemName}}\" successfully sent for withdrawal!",
     "opening": "Opening...",
-    "items_suffix": " items"
+    "items_suffix": " items",
+    "steam_connected": "Steam Connected",
+    "steam_not_connected": "Steam Not Connected",
+    "subscription_status_days": "{{status}}\n{{days}}",
+    "no_subscription": "None",
+    "drop_bonuses": "Drop Bonuses",
+    "level_bonus": "Level:",
+    "status_bonus": "Status:",
+    "achievements_bonus": "Achievements:",
+    "total_bonus": "Total Bonus:",
+    "inventory_title": "Inventory",
+    "subscription_tier_1": "Status",
+    "subscription_tier_2": "Status+",
+    "subscription_tier_3": "Status++",
+    "subscription_tier_default": "Tier {{tier}}",
+    "rarity": {
+      "consumer": "Consumer Grade",
+      "industrial": "Industrial Grade",
+      "milspec": "Mil-Spec Grade",
+      "restricted": "Restricted",
+      "classified": "Classified",
+      "covert": "Covert",
+      "contraband": "Contraband"
+    },
+    "purchase_button": "Purchase",
+    "acquired_date": "Acquired:",
+    "source": "Source:",
+    "sources": {
+      "case": "Case",
+      "purchase": "Purchase"
+    },
+    "drop_bonus_text": "% drop",
+    "no_description": "No description available",
+    "achievements_not_loaded": "Achievements not loaded",
+    "achievements_expand_hint": "Click for details",
+    "achievements_collapse_hint": "Click to collapse",
+    "profile_settings_title": "Profile Settings",
+    "level_text": "Level",
+    "level_max": "100",
+    "xp_earned_for": "XP is earned for:",
+    "opening_cases": "Opening cases",
+    "inventory": {
+      "active": "Active",
+      "opened_cases": "Opened Cases",
+      "withdrawn": "Withdrawn",
+      "sold": "Sold"
+    },
+    "settings": {
+      "title": "Settings",
+      "username": "Username",
+      "username_placeholder": "Enter new username",
+      "username_description": "Your display name on the site (3-20 characters)",
+      "new_password": "New Password",
+      "new_password_placeholder": "Enter new password",
+      "password_requirements": "Minimum 8 characters, uppercase and lowercase letters, numbers, special characters",
+      "confirm_password": "Confirm Password",
+      "confirm_password_placeholder": "Repeat new password",
+      "passwords_not_match": "Passwords do not match",
+      "password_min_8_chars": "Password must contain at least 8 characters",
+      "password_need_uppercase": "Password must contain an uppercase letter",
+      "password_need_lowercase": "Password must contain a lowercase letter",
+      "password_need_digit": "Password must contain a digit",
+      "password_need_special": "Password must contain a special character",
+      "invalid_username": "Invalid username",
+      "settings_saved": "Settings saved successfully!",
+      "settings_save_error": "Failed to save settings",
+      "steam_link_error": "Error: authorization token not found. Please log in again.",
+      "verification_code_sent": "Verification code sent to your email!",
+      "verification_code_error": "Error: Failed to send code",
+      "email_verified_success": "Email successfully verified!",
+      "email_verify_error": "Error: Invalid verification code",
+      "steam_not_connected_error": "Connect Steam account first",
+      "trade_url_fetched": "Trade URL automatically fetched and saved!",
+      "trade_url_manual_instructions": "Get Trade URL manually",
+      "trade_url_fetch_error": "Failed to get Trade URL. Please try later.",
+      "trade_url_fetch_network_error": "Error fetching Trade URL",
   },
   "inventory": {
     "title": "Inventory",
@@ -268,7 +343,10 @@
     "second": "second",
     "minute": "minute",
     "hour": "hour",
-    "day": "day"
+    "day": "day",
+    "day_1": "day",
+    "day_2_4": "days",
+    "day_5_plus": "days"
   },
   "homepage": {
     "loading_cases": "Loading cases...",
