--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -192,6 +192,14 @@
     },
     "drop_bonus_text": "% дроп",
     "no_description": "Описание отсутствует",
+    "achievements_not_loaded": "Достижения не загружены",
+    "achievements_expand_hint": "Нажмите для подробностей",
+    "achievements_collapse_hint": "Нажмите чтобы свернуть",
+    "profile_settings_title": "Настройки профиля",
+    "level_text": "Уровень",
+    "level_max": "100",
+    "xp_earned_for": "Опыт начисляется за:",
+    "opening_cases": "Открытие кейсов",
     "inventory": {
       "active": "Активные",
       "opened_cases": "Открытые кейсы",
@@ -209,6 +217,24 @@
       "confirm_password": "Подтвердите пароль",
       "confirm_password_placeholder": "Повторите новый пароль",
       "passwords_not_match": "Пароли не совпадают",
+      "password_min_8_chars": "Пароль должен содержать минимум 8 символов",
+      "password_need_uppercase": "Пароль должен содержать заглавную букву",
+      "password_need_lowercase": "Пароль должен содержать строчную букву",
+      "password_need_digit": "Пароль должен содержать цифру",
+      "password_need_special": "Пароль должен содержать специальный символ",
+      "invalid_username": "Недопустимое имя пользователя",
+      "settings_saved": "Настройки сохранены успешно!",
+      "settings_save_error": "Не удалось сохранить настройки",
+      "steam_link_error": "Ошибка: токен авторизации не найден. Пожалуйста, войдите в систему заново.",
+      "verification_code_sent": "Код подтверждения отправлен на ваш email!",
+      "verification_code_error": "Ошибка: Не удалось отправить код",
+      "email_verified_success": "Email успешно подтвержден!",
+      "email_verify_error": "Ошибка: Неверный код подтверждения",
+      "steam_not_connected_error": "Сначала подключите Steam аккаунт",
+      "trade_url_fetched": "Trade URL автоматически получен и сохранен!",
+      "trade_url_manual_instructions": "Получите Trade URL вручную",
+      "trade_url_fetch_error": "Не удалось получить Trade URL. Попробуйте позже.",
+      "trade_url_fetch_network_error": "Ошибка при получении Trade URL",
       "steam_trade_url": "Steam Trade URL",
       "trade_url_set": "Установлен",
       "trade_url_placeholder": "https://steamcommunity.com/tradeoffer/new/?partner=...",
@@ -344,7 +370,10 @@
     "second": "секунда",
     "minute": "минута",
     "hour": "час",
-    "day": "день"
+    "day": "день",
+    "day_1": "день",
+    "day_2_4": "дня",
+    "day_5_plus": "дней"
   },
   "homepage": {
     "loading_cases": "Загрузка кейсов...",
