--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -432,6 +432,40 @@
     "payment_error": "Ошибка при создании платежа",
     "subscription_error": "Ошибка при покупке подписки"
   },
+  "achievements": {
+    "Новичок": {
+      "name": "Новичок",
+      "description": "Откройте 10 кейсов"
+    },
+    "Коллекционер": {
+      "name": "Коллекционер",
+      "description": "Найдите 5 редких предметов"
+    },
+    "Премиум игрок": {
+      "name": "Премиум игрок",
+      "description": "Найдите 3 предмета стоимостью от 100 руб"
+    },
+    "Подписчик": {
+      "name": "Подписчик",
+      "description": "Иметь активную подписку 30 дней подряд"
+    },
+    "Покупатель подписки": {
+      "name": "Покупатель подписки",
+      "description": "Приобрести любой уровень подписки"
+    },
+    "Удачливый": {
+      "name": "Удачливый",
+      "description": "Открыть кейс 7 дней подряд"
+    },
+    "Миллионер": {
+      "name": "Миллионер",
+      "description": "Общая стоимость предметов в инвентаре 1,000,000 руб"
+    },
+    "Эксперт": {
+      "name": "Эксперт",
+      "description": "Иметь предмет с ценой выше 50,000 руб"
+    }
+  },
   "roulette": {
     "wheel_of_fortune": "🎰 Колесо Фортуны",
     "spin_and_win": "Крути колесо и выигрывай дни подписки!",
