--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -93,7 +93,6 @@
     "statistics": "Статистика",
     "achievements": "Достижения",
     "transactions": "Транзакции",
-    "settings": "Настройки",
     "level": "Уровень",
     "experience": "Опыт",
     "cases_opened": "Кейсов открыто",
@@ -433,35 +432,35 @@
     "subscription_error": "Ошибка при покупке подписки"
   },
   "achievements": {
-    "Новичок": {
+    "Novice": {
       "name": "Новичок",
       "description": "Откройте 10 кейсов"
     },
-    "Коллекционер": {
+    "Collector": {
       "name": "Коллекционер",
       "description": "Найдите 5 редких предметов"
     },
-    "Премиум игрок": {
+    "Premium Player": {
       "name": "Премиум игрок",
       "description": "Найдите 3 предмета стоимостью от 100 руб"
     },
-    "Подписчик": {
+    "Subscriber": {
       "name": "Подписчик",
       "description": "Иметь активную подписку 30 дней подряд"
     },
-    "Покупатель подписки": {
+    "Subscription Buyer": {
       "name": "Покупатель подписки",
       "description": "Приобрести любой уровень подписки"
     },
-    "Удачливый": {
+    "Lucky": {
       "name": "Удачливый",
       "description": "Открыть кейс 7 дней подряд"
     },
-    "Миллионер": {
+    "Millionaire": {
       "name": "Миллионер",
       "description": "Общая стоимость предметов в инвентаре 1,000,000 руб"
     },
-    "Эксперт": {
+    "Expert": {
       "name": "Эксперт",
       "description": "Иметь предмет с ценой выше 50,000 руб"
     }
