--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -432,35 +432,67 @@
     "subscription_error": "Ошибка при покупке подписки"
   },
   "achievements": {
-    "Novice": {
+    "Новичок": {
       "name": "Новичок",
       "description": "Откройте 10 кейсов"
     },
-    "Collector": {
+    "Коллекционер": {
       "name": "Коллекционер",
       "description": "Найдите 5 редких предметов"
     },
-    "Premium Player": {
+    "Премиум игрок": {
       "name": "Премиум игрок",
       "description": "Найдите 3 предмета стоимостью от 100 руб"
     },
-    "Subscriber": {
+    "Подписчик": {
       "name": "Подписчик",
       "description": "Иметь активную подписку 30 дней подряд"
     },
-    "Subscription Buyer": {
+    "Покупатель подписки": {
       "name": "Покупатель подписки",
       "description": "Приобрести любой уровень подписки"
     },
-    "Lucky": {
+    "Удачливый": {
       "name": "Удачливый",
       "description": "Открыть кейс 7 дней подряд"
     },
-    "Millionaire": {
+    "Миллионер": {
       "name": "Миллионер",
       "description": "Общая стоимость предметов в инвентаре 1,000,000 руб"
     },
-    "Expert": {
+    "Эксперт": {
+      "name": "Эксперт",
+      "description": "Иметь предмет с ценой выше 50,000 руб"
+    },
+    "Откройте 10 кейсов": {
+      "name": "Новичок",
+      "description": "Откройте 10 кейсов"
+    },
+    "Найдите 5 редких предметов": {
+      "name": "Коллекционер",
+      "description": "Найдите 5 редких предметов"
+    },
+    "Найдите 3 предмета стоимостью от 100 руб": {
+      "name": "Премиум игрок",
+      "description": "Найдите 3 предмета стоимостью от 100 руб"
+    },
+    "Иметь активную подписку 30 дней подряд": {
+      "name": "Подписчик",
+      "description": "Иметь активную подписку 30 дней подряд"
+    },
+    "Приобрести любой уровень подписки": {
+      "name": "Покупатель подписки",
+      "description": "Приобрести любой уровень подписки"
+    },
+    "Открыть кейс 7 дней подряд": {
+      "name": "Удачливый",
+      "description": "Открыть кейс 7 дней подряд"
+    },
+    "Общая стоимость предметов в инвентаре 1,000,000 руб": {
+      "name": "Миллионер",
+      "description": "Общая стоимость предметов в инвентаре 1,000,000 руб"
+    },
+    "Иметь предмет с ценой выше 50,000 руб": {
       "name": "Эксперт",
       "description": "Иметь предмет с ценой выше 50,000 руб"
     }
