--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -248,35 +248,28 @@
       "verification_code_sent": "Код подтверждения отправлен на ваш email!",
       "verification_code_error": "Ошибка: Не удалось отправить код",
       "email_verified_success": "Email успешно подтвержден!",
+      "trade_url_label": "Steam Trade URL",
+      "trade_url_placeholder": "https://steamcommunity.com/tradeoffer/new/...",
+      "trade_url_required": "Необходим для автоматической отправки предметов. Можно получить автоматически!",
+      "trade_url_locked": "Trade URL сохранен и заблокирован",
+      "connect_steam_first": "Сначала подключите Steam аккаунт",
+      "fetching_trade_url": "Получение...",
+      "fetch_trade_url_auto": "Получить автоматически",
+      "steam_profile_label": "Steam Профиль",
+      "steam_connected": "Steam подключен",
+      "connect_steam": "Подключить Steam",
+      "click_to_connect": "Нажмите для подключения",
+      "email_verification_label": "Email подтверждение",
+      "email_verified": "Email подтвержден",
+      "verify_email_button": "Подтвердить Email",
+      "click_to_send_code": "Нажмите для отправки кода",
+      "saving": "Сохранение...",
       "email_verify_error": "Ошибка: Неверный код подтверждения",
       "steam_not_connected_error": "Сначала подключите Steam аккаунт",
       "trade_url_fetched": "Trade URL автоматически получен и сохранен!",
       "trade_url_manual_instructions": "Получите Trade URL вручную",
       "trade_url_fetch_error": "Не удалось получить Trade URL. Попробуйте позже.",
       "trade_url_fetch_network_error": "Ошибка при получении Trade URL",
-      "steam_trade_url": "Steam Trade URL",
-      "trade_url_set": "Установлен",
-      "trade_url_placeholder": "https://steamcommunity.com/tradeoffer/new/?partner=...",
-      "fetch_trade_url": "Получить автоматически",
-      "fetching_trade_url": "Получение Trade URL...",
-      "email_verification": "Подтверждение Email",
-      "email_not_verified": "Ваш email не подтвержден",
-      "verify_email": "Подтвердить Email",
-      "save_changes": "Сохранить изменения",
-      "saving": "Сохранение...",
-      "fetch_trade_url_auto": "Получить Trade URL автоматически",
-      "trade_url_locked": "Trade URL установлен и заблокирован для безопасности. Для изменения обратитесь в поддержку.",
-      "trade_url_required": "Необходим для автоматической отправки предметов. Можно получить автоматически!",
-      "connect_steam_first": "Сначала подключите Steam аккаунт для автоматического получения Trade URL",
-      "steam_profile_label": "Steam Профиль",
-      "steam_connected": "Steam подключен",
-      "connect_steam": "Подключить Steam",
-      "click_to_connect": "Нажмите для привязки аккаунта",
-      "email_verification_label": "Email подтверждение",
-      "email_verified": "Email подтвержден",
-      "verify_email_button": "Подтвердить Email",
-      "click_to_send_code": "Нажмите для отправки кода",
-      "cancel": "Отмена",
       "email_verification_modal": {
         "title": "Подтверждение Email",
         "send_code_to": "Отправим код подтверждения на:",
