--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -15,7 +15,8 @@
     "play": "Play",
     "daily": "daily",
     "online": "Online: {{count}}",
-    "balance": "Balance"
+    "balance": "Balance",
+    "currency_suffix": " CR"
   },
   "header": {
     "home": "Home",
